- stage CONSOLE can now be abbreviated as in CMS
- stage XLATE can now be used as TRANSLATE and its abbreviations as in CMS
- add CASELESS to the abbrev stage to be CMS compliant (Jeff Hennick)
- BUFFER, APPEND, TAKE and COMPARE stages and tests (Jeff Hennick)
- documentation additions and improvements; added warning about Java 8 being the highest working version
- experimental native executable versions of the compiler for X86_64
  versions of macOS and Linux for use with Java versions 9-14
- Added DROP FIRST number BYTES (secondary); * (secondary); negative stage (Jeff Hennick)
- BETWEEN stage hex and binary strings and tests (Jeff Hennick)
- many SPECs CMS compliancy improvements (Jeff Hennick)
- a new njp-model.el for emacs to correctly handle specs 1-*
- AGGRC stage added

NetRexx 3.08 GA [September 5th, 2019]

- restore OS/2 and Java 6 compatibility
- fixes a serious translator problem introduced in 3.07 - some classes ended up in the wrong files
- suppress generics-related warnings by adding a @SuppressWarnings annotation
- added a NetRexxC.clgMain method for compile, load and go 
- the pipes.runner class now (compiles and directly) runs a pipeline
- default stage separator is now | like on zVM
- added the VM abbreviations of >,<,>> for file I/O device drivers 
- pipes compiler now reliably finds classes it needs
- cleaned up pipes examples to make sure they all compile
- fixed C2X function on specs pipe stage
- added listzip stage
- added zip stage
- added unzip stage
- added -- (comment) stage (Jeff Hennick)
- improved take stage (Jeff Hennick)
- added pipe query stage for version info
- pipes compiler command is now called pipc
- added Pipes for NetRexx docs to distribution
- display failed summaries last - Jason Martin
- squelched the remark that we found a java compiler and other tourist information
- add an experimental rexxcps.nrx from the work of Mike Cowlishaw (for wider evaluation)
- added Joy programming language interpreter in examples/languages