@@ -1,5 +1,6 @@
 /* rexx */
-"cp documentation/nrl/*.pdf ~/Library/Mobile\ Documents/com~apple~CloudDocs/nrxdocs"
-"cp documentation/ug/*.pdf ~/Library/Mobile\ Documents/com~apple~CloudDocs/nrxdocs"
-"cp documentation/pg/*.pdf ~/Library/Mobile\ Documents/com~apple~CloudDocs/nrxdocs"
-"cp documentation/njpipes/*.pdf ~/Library/Mobile\ Documents/com~apple~CloudDocs/nrxdocs"
+trace 'R'
+"cp documentation/nrl/*.pdf ~/Library/Mobile Documents/com~apple~CloudDocs/Documents/Programming_languages/NetRexx"
+"cp documentation/ug/*.pdf ~/Library/Mobile Documents/com~apple~CloudDocs/Documents/Programming_languages/NetRexx"
+"cp documentation/pg/*.pdf ~/Library/Mobile Documents/com~apple~CloudDocs/Documents/Programming_languages/NetRexx"
+"cp documentation/njpipes/*.pdf ~/Library/Mobile Documents/com~apple~CloudDocs/Documents/Programming_languages/NetRexx"
