@@ -401,16 +401,6 @@
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=62 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.2in; padding-left: 0in; padding-right: 0in">
-			<P CLASS="western"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 9pt"><B>configure</B></FONT></FONT></P>
-		</TD>
-		<TD WIDTH=300 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.2in; padding-left: 0in; padding-right: 0.04in">
-			<P CLASS="western" STYLE="page-break-inside: avoid; page-break-after: avoid">
-			<FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 9pt">Not
-			implemented. Create specifications for CMS Pipelines in z/VM.</FONT></FONT></P>
-		</TD>
-	</TR>
-	<TR VALIGN=TOP>
-		<TD WIDTH=62 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.2in; padding-left: 0in; padding-right: 0in">
 			<P CLASS="western"><FONT FACE="Courier New, monospace"><FONT SIZE=2 STYLE="font-size: 9pt"><B>compare</B></FONT></FONT></P>
 		</TD>
 		<TD WIDTH=300 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.2in; padding-left: 0in; padding-right: 0.04in">
@@ -2673,5 +2663,5 @@ Pipes for NetRexx: this can only read vars</PRE>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu Sep  5 21:30:14 AST 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue Apr 21 21:13:10 CEST 2020 <!-- hhmts end -->
 </body> </html>
