@@ -21,13 +21,13 @@ class space extends stage
 method run()
 
   a = arg()
-  say '------------->' a
+--  say '------------->' a
   
   parse a arg1 arg2 arg3
 
-  say '------------->' arg1
-  say '------------->' arg2
-  say '------------->' arg3
+--  say '------------->' arg1
+--  say '------------->' arg2
+--  say '------------->' arg3
   
    -- left = boolean 1
 
