@@ -11,13 +11,14 @@ NetRexx 3.09 GA [April 10th, 2020]
 - add CASELESS to the abbrev stage to be CMS compliant (Jeff Hennick)
 - BUFFER, APPEND, TAKE and COMPARE stages and tests (Jeff Hennick)
 - documentation additions and improvements; added warning about Java 8 being the highest working version
-- experimental native executable versions of the compiler for X86_64
-  versions of macOS and Linux for use with Java versions 9-14
+- experimental native executable versions of the compiler for X86_64, versions of macOS and Linux for use with Java versions 9-14
 - Added DROP FIRST number BYTES (secondary); * (secondary); negative stage (Jeff Hennick)
 - BETWEEN stage hex and binary strings and tests (Jeff Hennick)
 - many SPECs CMS compliancy improvements (Jeff Hennick)
 - a new njp-model.el for emacs to correctly handle specs 1-*
 - AGGRC stage added
+- multithreading bug with multiple CONSOLE stages in a pipeline solved
+
 
 NetRexx 3.08 GA [September 5th, 2019]
 
